create method for querying via cosine distance